fix column align

--- a/src/app/marketing/maileditor/maileditor.component.scss
+++ b/src/app/marketing/maileditor/maileditor.component.scss
@@ -76,7 +76,6 @@
     border-radius: 2px;
     color: rgba(0, 0, 0, 0.87);
     cursor: move;
-    background: white;
     max-height: 100%;
     min-height: 50px;
     width: 100%;
@@ -289,6 +288,10 @@
 
 .horizontalSocial {
   display: inline-block;
+}
+
+.full-width-item {
+  width: 100%;
 }
 
 
